# penr-oz-agent-memory-rust

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml  docker-compose.yml
.gemini/: config.yaml
examples/: agent_client.rs
migrations/: 001_create_sessions.sql  002_add_sessions_created_at_index.sql
src/: config.rs  error.rs  main.rs  memory.rs  routes.rs  session_store.rs  vector_store.rs
src/embedding/: claude.rs  mod.rs  ollama.rs  openai.rs
